<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IAM_chat_2021</string>
    <string name="action_settings">Préférences</string>
    <string name="action_account">Mon Compte</string>
    <string name="titre">IAM-Chat !</string>
    <string name="login">Login : </string>
    <string name="passe">Mot de passe : </string>
    <string name="changePasse">Changer mot de passe : </string>
    <string name="ok">OK</string>
    <string name="monCompte">Mon Compte</string>
    <string name="createCompte">Créer Compte</string>
    <string name="couleur">Couleur Préférée : </string>
    <string name="choixConversation">Choix Conversation</string>
    <string name="conversation">Conversation</string>
    <string name="preferences">Préférences</string>
    <string name="remember">Se souvenir de moi : </string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_compte">Compte</string>
    <string name="title_activity_choix_conversation">ChoixConversation</string>
    <string name="title_activity_show_conversation">ShowConversation</string>
    <string name="message">Nouveau message…</string>

    <string-array name="couleurs">
        <item>red</item>
        <item>green</item>
        <item>blue</item>
    </string-array>

    <string name="title_activity_choix_conv">ChoixConvActivity</string>
    <string name="hello_world">Hello world!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pref">PrefActi</string>

</resources>