<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:gravity="center_horizontal|right"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="30pt"
        android:paddingBottom="20pt"
        android:text="@string/titre"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_margin="5pt"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_edtPasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passe"
            app:endIconMode="password_toggle"
            android:layout_margin="5pt"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/login_labelRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:textColor="?attr/colorOnPrimary" />

        <CheckBox
            android:id="@+id/login_cbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <Button
        android:id="@+id/login_btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/ok"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        android:layout_gravity="center"
        android:paddingStart="50pt"
        android:paddingEnd="50pt" />

    <TextView
        android:id="@+id/login_progressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>