<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:gravity="center_horizontal|right"
    android:orientation="vertical"
    android:textAlignment="center">

    <TextView
        android:id="@+id/create_compte_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/createCompte"
        android:textColor="?attr/colorOnPrimary"
        android:paddingTop="30pt"
        android:paddingBottom="20pt"
        android:textSize="20pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_compte_edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_margin="5pt"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_compte_edtPasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passe"
            app:endIconMode="password_toggle"
            android:layout_margin="5pt"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/create_compte_btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/ok"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        android:layout_gravity="center"
        android:paddingStart="50pt"
        android:paddingEnd="50pt"
        android:layout_marginTop="50dp"/>

</LinearLayout>