<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:gravity="center_horizontal|right"
    android:orientation="vertical"
    android:textAlignment="center">

    <TextView
        android:id="@+id/compte_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/monCompte"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/compte_edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_margin="5pt"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_edtPasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passe"
            app:endIconMode="password_toggle"
            android:layout_margin="5pt"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/couleur"
            android:layout_margin="5pt">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--<TextView
            android:id="@+id/compte_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/couleur"
            android:textColor="@color/blanc" />

        <Spinner
            android:id="@+id/compte_listeAvatars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blanc"
            android:entries="@array/couleurs" />-->

    </LinearLayout>

    <Button
        android:id="@+id/compte_btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/ok"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        android:layout_gravity="center"
        android:layout_marginTop="10pt"
        android:paddingStart="50pt"
        android:paddingEnd="50pt"
        />

</LinearLayout>